--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gestione Sport e Categorie</title>
-    <link rel="stylesheet" href="/css/gestione-sport.css">
+    <link rel="stylesheet" href="/static/css/gestione-sport.css">
+    <script src="/static/js/gestione-sport.js"></script>
     {% include 'partials/head-imports.html' %}
     
 </head>
